fix(lp): adjust button spacing

--- a/index.html
+++ b/index.html
@@ -11,8 +11,14 @@
 
 <body>
   <header>
-    <div class="logo">
-      <img src="./assets/images/logo.png" alt="Logo do Colégio Sol Nascente">
+    <div class="logo-section">
+      <div class="logo">
+        <img src="./assets/images/logo.png" alt="Logo do Colégio Sol Nascente">
+      </div>
+      <div>
+        <p>Colégio Sol Nascente</p>
+        <p>Despertando Potenciais e Inspirando Saberes!</p>
+      </div>
     </div>
     <nav>
       <ul>
